--- a/echarts_pro/css/index.less
+++ b/echarts_pro/css/index.less
@@ -73,7 +73,6 @@ header {
             flex: 5;
             margin: 0 .125rem;
 
-
             .no {
                 padding: .1875rem;
                 background: rgba(101, 132, 226, 0.1);
@@ -275,13 +274,18 @@ header {
                 line-height: .6rem;
                 color: #fff;
                 text-align: center;
-                font-size: 20px;
+                font-size: .25rem;
                 font-weight: 400;
+
+                a {
+                    color: #fff;
+                    margin: 0 0.1875rem;
+                    text-decoration: underline;
+                }
             }
 
             .chart {
                 height: 3rem;
-                background: pink;
             }
         }
     }
